SOme UI Changes

--- a/src/components/Posts/style.css
+++ b/src/components/Posts/style.css
@@ -1,7 +1,6 @@
 body {
-    margin-top: 100px;
-    background-color: #dadfe6;
-    color: rgb(33, 30, 30);
+    background-color: #96a2b2;
+    color: rgb(17, 3, 3);
     text-align: center;
   }
   h1 {
